--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </section>
     <section class="lel">
-      <h2>no to powiedzmy, że zjebałem</h2>
+      <h2>no to powiedzmy, że zjebałę</h2>
       <address><a href="tel:533114559">who u gonna call</a></address>
     </section>
   </header>
