sass framework has begun
srsly

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300&amp;subset=latin,latin-ext">
     <title>u wot</title>
   </head>
   <body></body>
-  <header>
-    <section> 
+  <header> 
+    <section>
       <nav>
         <ul>
           <li><a href="">link</a></li>
@@ -19,8 +18,8 @@
         </ul>
       </nav>
     </section>
-    <section class="lel">
-      <h2>no to powiedzmy, że zjebałę</h2>
+    <section>
+      <h2>no to powiedzmy, że już bez przekleństw</h2>
       <address><a href="tel:533114559">who u gonna call</a></address>
     </section>
   </header>
@@ -39,5 +38,5 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
   </main>
-  <footer>jakieś gowno</footer>
+  <footer>ladne zdanie</footer>
 </html>
