--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>u wot</title>
   </head>
-  <body>
+  <body> 
     <header> 
       <nav>
         <ul>
@@ -18,7 +18,7 @@
       </nav>
       <section>
         <h2>no to powiedzmy, że już bez przekleństw</h2>
-        <address><a href="mailto:hellospambotrmk.gdy@gmail.com" onclick="this.href=this.href.replace(/hellospambot/,'');">email</a><a href="tel:533114559">who u gonna call</a><a href="dunno">face</a></address>
+        <address><a href="mailto:hellospambotrmk.gdy@gmail.com" onclick="this.href=this.href.replace(/hellospambot/,'');">email</a><a href="tel:533114559">who u gonna call</a><a href="dunno">skype</a></address>
       </section>
     </header>
     <main>
@@ -29,6 +29,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <aside>
+          <h4>Lorem meh</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </aside>
       </section>
