--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>u wot</title>
   </head>
   <body> 
-    <header> 
+    <header>
+      <figure title="logo"></figure>
       <nav>
         <ul>
           <li><a href="">link</a></li>
