--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body> 
     <header>
       <figure title="logo"></figure>
+      <h1>catsnake</h1>
       <nav>
         <ul>
           <li><a href="">link</a></li>
