--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body> 
     <header>
-      <figure title="logo"></figure>
-      <h1>catsnake</h1>
+      <figure title="logo">
+        <object type="image/svg+xml" data="gx/catsnake.svg"></object>
+        <figcaption>logo</figcaption>
+      </figure>
       <nav>
         <ul>
           <li><a href="">link</a></li>
