--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       </figure>
       <nav>
         <ul>
-          <li><a href="">link</a></li>
-          <li><a href="">link</a></li>
-          <li><a href="">link</a></li>
-          <li><a href="">link</a></li>
+          <li><a href="">link1</a></li>
+          <li><a href="">link2</a></li>
+          <li><a href="">link3</a></li>
+          <li><a href="">link4</a></li>
         </ul>
       </nav>
       <section>
